[iOS][WK2] <select> tapping "next" does not save new picker value https://bugs.webkit.org/show_bug.cgi?id=134409

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-06-27
Reviewed by Enrica Casucci.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView accessoryTab:]):
We know the assisted node will change, so call endEditing
before the assisted node changes in the WebProcess.

(-[WKContentView _stopAssistingNode]):
Ensure we call endEditing to trigger controlEndEditing.

* UIProcess/ios/forms/WKFormSelectPicker.mm:
(-[WKMultipleSelectPicker initWithView:]):
(-[WKMultipleSelectPicker pickerView:row:column:checked:]):
(-[WKSelectSinglePicker dealloc]):
Style fixes.

Canonical link: https://commits.webkit.org/152394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170554 268f45cc-cd09-0410-ab3c-d52691b4dbfc